# clim2parquet

./: .gitignore  404.html  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml  test.yaml
CHANGELOG/: index.html
admin_unit_index/: index.html
data-raw/: admin_unit_ids.py  data_sources.py  pyproject.toml
docs/: admin_unit_index.md  index.md  reference.md
reference/: index.html
search/: search_index.json
src/clim2parquet/: __about__.py  __init__.py  tools.py
src/clim2parquet/data/: country_codes.csv  data_sources.csv
tests/: __init__.py  test_admin_data_maker.py  test_data_names.py  test_internal_fns.py  test_x_to_parquet.py
tests/test-data/ZZZ/: MWI_v410_1_1_1_1_ERA5_Land_2m_temperature_1950_1959.csv  MWI_v410_1_1_CHIRPS_total_precipitation_1980_1989.csv  MWI_v410_2_1_CHIRPS_total_precipitation_1980_1989.csv  MWI_v410_4_3_24_1_ERA5_Land_2m_temperature_2010_2019.csv  MWI_v410_CHIRPS_total_precipitation_1980_1989.csv  MWI_v410_ERA5_Land_2m_temperature_1980_1989.csv  MWI_v410_ERA5_Land_2m_temperature_daymax_1980_1989.csv  MWI_v410_ERA5_Land_2m_temperature_daymin_1980_1989.csv
tests/test-data/country_A/: MWI_v410_1_1_CHIRPS_total_precipitation_1990_1999.csv  MWI_v410_1_1_CHIRPS_total_precipitation_2000_2009.csv  MWI_v410_1_1_CHIRPS_total_precipitation_2010_2019.csv  MWI_v410_1_1_CHIRPS_total_precipitation_2020_2029.csv  MWI_v410_CHIRPS_total_precipitation_1990_1999.csv  MWI_v410_CHIRPS_total_precipitation_2000_2009.csv  MWI_v410_CHIRPS_total_precipitation_2010_2019.csv  MWI_v410_CHIRPS_total_precipitation_2020_2029.csv  MWI_v410_ERA5_Land_2m_temperature_1950_1959.csv  MWI_v410_ERA5_Land_2m_temperature_1960_1969.csv  MWI_v410_ERA5_Land_2m_temperature_1970_1979.csv  MWI_v410_ERA5_Land_2m_temperature_1990_1999.csv  MWI_v410_ERA5_Land_2m_temperature_2000_2009.csv  MWI_v410_ERA5_Land_2m_temperature_2010_2019.csv  MWI_v410_ERA5_Land_2m_temperature_2020_2029.csv  MWI_v410_ERA5_Land_2m_temperature_daymax_1950_1959.csv  MWI_v410_ERA5_Land_2m_temperature_daymax_1960_1969.csv  MWI_v410_ERA5_Land_2m_temperature_daymax_1970_1979.csv  MWI_v410_ERA5_Land_2m_temperature_daymax_1990_1999.csv  MWI_v410_ERA5_Land_2m_temperature_daymax_2000_2009.csv  MWI_v410_ERA5_Land_2m_temperature_daymax_2010_2019.csv  MWI_v410_ERA5_Land_2m_temperature_daymax_2020_2029.csv  MWI_v410_ERA5_Land_2m_temperature_daymin_1950_1959.csv  MWI_v410_ERA5_Land_2m_temperature_daymin_1960_1969.csv  MWI_v410_ERA5_Land_2m_temperature_daymin_1970_1979.csv  MWI_v410_ERA5_Land_2m_temperature_daymin_1990_1999.csv  MWI_v410_ERA5_Land_2m_temperature_daymin_2000_2009.csv  MWI_v410_ERA5_Land_2m_temperature_daymin_2010_2019.csv  MWI_v410_ERA5_Land_2m_temperature_daymin_2020_2029.csv  MWI_v410_ERA5_Land_relative_humidity_1950_1959.csv  MWI_v410_ERA5_Land_relative_humidity_1960_1969.csv  MWI_v410_ERA5_Land_relative_humidity_1970_1979.csv  MWI_v410_ERA5_Land_relative_humidity_1980_1989.csv  MWI_v410_ERA5_Land_relative_humidity_1990_1999.csv  MWI_v410_ERA5_Land_relative_humidity_2000_2009.csv  MWI_v410_ERA5_Land_relative_humidity_2010_2019.csv  MWI_v410_ERA5_Land_relative_humidity_2020_2029.csv  MWI_v410_ERA5_Land_specific_humidity_1950_1959.csv  MWI_v410_ERA5_Land_specific_humidity_1960_1969.csv  MWI_v410_ERA5_Land_specific_humidity_1970_1979.csv  (+10 more)
