[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clim2parquet"
version = "0.0.1"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Pratik Gupte", email = "pratikgupte16@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "ipykernel>=6.29.5",
  "pandas",
  "pyarrow",
  "pytest>=8.3.5",
  "ruff>=0.9.9",
]

[project.urls]
Documentation = "https://github.com/Pratik Gupte/clim2parquet#readme"
Issues = "https://github.com/Pratik Gupte/clim2parquet/issues"
Source = "https://github.com/Pratik Gupte/clim2parquet"

[tool.hatch.version]
path = "src/clim2parquet/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/clim2parquet tests}"

[tool.coverage.run]
source_pkgs = ["clim2parquet", "tests"]
branch = true
parallel = true
omit = [
  "src/clim2parquet/__about__.py",
]

[tool.coverage.paths]
clim2parquet = ["src/clim2parquet", "*/clim2parquet/src/clim2parquet"]
tests = ["tests", "*/clim2parquet/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
